test/corpus/comments.txt
===================
Comments Everywhere
===================

# foo
  # bar
_ = YES
    # zir

---

(doxyfile
  (comment
    (comment_body))
  (comment
    (comment_body))
  (option
    (identifier)
    (value
      (literal
        (boolean))))
  (comment
    (comment_body)))
