test/corpus/literals.txt
===============
Boolean Literal
===============

_ = YES
_ = NO

---

(doxyfile
  (option
    (identifier)
    (value
      (literal
        (boolean))))
  (option
    (identifier)
    (value
      (literal
        (boolean)))))

==============
Number Literal
==============

_ = 42

---

(doxyfile
  (option
    (identifier)
    (value
      (literal
        (number)))))

=====================
Quoted String Literal
=====================

_ = "foo bar, qux, 42"

---

(doxyfile
  (option
    (identifier)
    (value
      (literal
        (quoted_string)))))

==============================
Simple Unquoted String Literal
==============================

_ = Foo

---

(doxyfile
  (option
    (identifier)
    (value
      (literal
        (unquoted_string)))))

===============================
Complex Unquoted String Literal
===============================

_ = FooBar-Qux_Quuz.Zir

---

(doxyfile
  (option
    (identifier)
    (value
      (literal
        (unquoted_string)))))
